src/main/metadata-au/objects/Vehicle_Class_Priority_Score__mdt.object
<CustomObject>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Class_Score__c</fullName>
        <label>Vehicle Class Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_Class__c</fullName>
        <label>Vehicle Class</label>
        <picklist>
            <picklistValues>
                <fullName>A 45 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Class</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>A-Class POV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All New A-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C 350 e Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C 63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class POV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-Class Sedan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLA-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLA-Class Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLA Shooting Brake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLC-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL-Class POV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class Coupé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLK-Class POV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLS-Class</fullName>
            </picklistValues>
            <values>
                <fullName>Mercedes-AMG GT C</fullName>
            </values>
            <values>
                <fullName>Mercedes-AMG GT R</fullName>
            </values>
            <picklistValues>
                <fullName>Mercedes-AMG GT S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mercedes-Maybach S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ML-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New C Sport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rosa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S 500 e</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S65 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class Cabriolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class Coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class POV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Class Saloon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL63 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLC-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SL-Class POV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK55 AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLK-Class POV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLS-Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart Forfour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart Fortwo cabrio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart Fortwo coupe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart Roadster</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vehicle_Classification__c</fullName>
        <label>Vehicle Classification</label>
        <picklist>
            <picklistValues>
                <fullName>NGCC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top-Range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NGCC AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Range AMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top-Range AMG</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Vehicle Class Priority Score</label>
    <pluralLabel>Vehicle Class Priority Scores</pluralLabel>
</CustomObject>